@@ -72,6 +72,8 @@ Version 0.7.3 UNRELEASED
 
   * [curses] Avoid marking as auto/non-auto if already set (Closes: #265013)
 
+  * [curses] Print message when starting to perform actions (Closes: #323371)
+
 - Internal changes:
 
   * temp.cc: simplify code and messages and reduce the use of boost libs
